1998-06-03  Martin Baulig <martin@home-of-linux.org>

	* gnome-guile-checks.m4 (GNOME_CHECK_GUILE): Looks also in $GNOME_LIBDIR;
	added failflag: GNOME_CHECK_GUILE(fail) will abort if guile cannot be found.

1998-05-23  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-sysdeps.m4 (GNOME_LIBGTOP_HOOK):
	(libgtop_use_machine_h): Set this to true on SunOS.

1998-05-22  Martin Baulig  <baulig@merkur.uni-trier.de>

	* gnome-fileutils.m4 (GNOME_FILEUTILS_CHECKS): New file.
	Imported from `configure.in' in GNU fileutils 3.16. It does
	all the checks that are needed for the diskusage applet.

1998-05-22  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-check.m4 (GNOME_LIBGTOP_HOOK): New file.
	Checks whether libgtop is installed and reads its `libgtopConf.sh'
	file if it can be found. Defines HAVE_LIBGTOP on success and
	provides HAVE_LIBGTOP automake conditional.

1998-05-21  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-sysdeps.m4 (GNOME_LIBGTOP_SYSDEPS): New file.
	(libgtop_sysdeps_dir): sysdeps directory libgtop uses.
	(libgtop_use_machine_h): define HAVE_GLIBTOP_MACHINE_H if this
	is `yes'.
	(libgtop_need_server): we only need the libgtop server, when
	this has a value of `yes'. Defines NEED_LIBGTOP and NEED_LIBGTOP
	automake conditional.

1998-05-19  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-support.m4 (strerror): New check.
	(sys_errlist): Check for this variable, needed for `strerror'.
	(program_invocation_name, program_invocation_short_name): Change
	method used to check for these.

1998-05-09  Raja R Harinath  <harinath@cs.umn.edu>

	* autogen.sh: Remove simple-minded check for `gtk+'.

Fri Apr 24 16:43:38 1998  Owen Taylor  <otaylor@gtk.org>

	* autogen.sh: Pass the results of the environment variable
	ACLOCAL_FLAGS to aclocal. This allows, for instance,

	 ACLOCAL_FLAGS="-I /home/owen/share/aclocal/" autogen.sh
	
Sun Apr 19 01:35:53 EDT 1998 Gregory McLean <gregm@comstar.net>
